fix a chrom display problem cause by long word wrap problem, now justify the email to the left

--- a/css/index.css
+++ b/css/index.css
@@ -6,16 +6,15 @@ html {
 
 body {
     height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
     font-size: 100%;
     font-family: Lato, Helvetica, Arial, sans-serif;
     background-color: #fafafa;
     padding: 0px;
     border: 0px solid red;
     margin: 0px;
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    
+   
 }
 
 a {
@@ -173,8 +172,8 @@ header {
     }
 
     #head-email {
-        margin-right: 1em;
-        justify-self: right;
+        margin-left: 1em;
+        justify-self: start;
 
     }
 
